kubernetes/apps/network/external-services/haos.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: haos
  namespace: network
  labels:
    app.kubernetes.io/name: haos
    app.kubernetes.io/instance: haos
spec:
  ports:
    - name: http
      port: &port 8123
      protocol: TCP
      targetPort: *port
---
apiVersion: v1
kind: Endpoints
metadata:
  name: haos
subsets:
  - addresses:
      - ip: 192.168.1.12
    ports:
      - port: 8123
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: haos
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Home Assistant"
    gethomepage.dev/group: "Links"
    gethomepage.dev/icon: "home-assistant"
  labels:
    app.kubernetes.io/name: haos
    app.kubernetes.io/instance: haos
spec:
  ingressClassName: external
  rules:
    - host: &host hass.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: haos
                port:
                  number: 8123
  tls:
    - hosts:
        - *host
